<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="accessory_view">Accessory view</string>
    <string name="advanced">Advanced</string>
    <string name="aggiungi_account">New account</string>
    <string name="app_version_new">v%s</string>
    <string name="attiva">Active</string>
    <string name="auto">Auto</string>
    <string name="auto_save">Auto save</string>
    <string name="backup_accounts">Backup the accounts</string>
    <string name="backup_not_found">No backups found</string>
    <string name="bytes">Bytes</string>
    <string name="cancella">Delete</string>
    <string name="cancellazione">Deleting files…</string>
    <string name="caricamento">Loading…</string>
    <string name="cartella_locale_corrente">Current local folder</string>
    <string name="change_list_type">Change the list type</string>
    <string name="changelog">Changelog</string>
    <string name="chiaro">Light</string>
    <string name="chiave_privata">Private Key</string>
    <string name="codifica">Encoding</string>
    <string name="condividi">Share</string>
    <string name="connection_name">Connection Name</string>
    <string name="copy_url">Copy URL</string>
    <string name="crea_cartella_locale">New local folder</string>
    <string name="crea_cartella_remota">New remote folder</string>
    <string name="crea_file_remoto">New remote file</string>
    <string name="create_new_account">Create a new account</string>
    <string name="create_new_account_to_start">Create a new account to start.</string>
    <string name="cut">Cut</string>
    <string name="default_local_folder">Default local folder</string>
    <string name="delete_current_file">Delete current file</string>
    <string name="disconneti">Disconnect</string>
    <string name="donation_10">Electricity bills</string>
    <string name="donation_2">An ice cream</string>
    <string name="donation_20">The right pillow</string>
    <string name="donation_4">Cup of coffee</string>
    <string name="donation_50">Solid-state drive</string>
    <string name="donation_99">Sound system</string>
    <string name="donation_action">Donate</string>
    <string name="donation_error_iab_setup">Failed to setup in-app-billing service!</string>
    <string name="donation_info">Turbo Editor is a free and &lt;a href=http://github.com/vmihalachi/turbo-editor/>open source&lt;/a> app. You can show your appreciation and support development by donating:</string>
    <string name="donation_item_bought">"You've donated for this item already."</string>
    <string name="donation_no_responsibility">Notice that Google is not responsible for that payments method.</string>
    <string name="donation_title">Donate to developer</string>
    <string name="dove_scaricare">Where to download?</string>
    <string name="download">Download</string>
    <string name="download_completato">Download completed</string>
    <string name="duplicate">Duplicate</string>
    <string name="enable_autoencoding">Auto-Encoding</string>
    <string name="err_cant_open_the_file">Cannot open the file</string>
    <string name="err_occured">An error occurred</string>
    <string name="err_temp_folder_doesnt_exist">Temporary folder does not exist</string>
    <string name="exporting_accounts">Exporting the accounts…</string>
    <string name="extra_options">Extra options</string>
    <string name="fatto">Done</string>
    <string name="file">File</string>
    <string name="file_cannot_be_renamed">The file cannot be renamed</string>
    <string name="file_modified">The file %1$s was modified, do you want to upload it?</string>
    <string name="file_saved_with_success">The file %1$s was saved with success!</string>
    <string name="find">Find</string>
    <string name="folder">Folder</string>
    <string name="font_size">Font size</string>
    <string name="goto_line">Go to Line…</string>
    <string name="goto_page">Go to Page…</string>
    <string name="home">Home</string>
    <string name="host">Host</string>
    <string name="ignore_back_button">Ignore back button</string>
    <string name="importing_accounts">Importing the accounts…</string>
    <string name="info">Info</string>
    <string name="is_the_working_folder">This is the working folder</string>
    <string name="keyboard_suggestions_and_swipe">Keyboard suggestions and Swipe</string>
    <string name="light_theme">Light Theme</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="local_folder_to_sync">Local folder to sync</string>
    <string name="locale">Local</string>
    <string name="log_in">Logging in…</string>
    <string name="long_click_for_more_options">Long click for more options</string>
    <string name="match_case">Match case</string>
    <string name="menu_syntax_highlight">Syntax highlight</string>
    <string name="modifica">Edit</string>
    <string name="modification_date">Modification date</string>
    <string name="muovi">Move</string>
    <string name="name">Name</string>
    <string name="nascondi">Hide</string>
    <string name="new_file">New file</string>
    <string name="new_local_file">New local file</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="nome_app">Turbo Client</string>
    <string name="nome_app_turbo_editor">Bluino Loader</string>
    <string name="nome_utente">Username</string>
    <string name="occurrences_found">%s occurrences was found</string>
    <string name="open">Open</string>
    <string name="open_a_file">Open a file</string>
    <string name="passiva">Passive</string>
    <string name="passphrase">Passphrase</string>
    <string name="password">Password</string>
    <string name="password_summary">Leave it empty to prompt for it every session</string>
    <string name="paste">Paste</string>
    <string name="please_wait">Extracting Tools Please wait…</string>
    <string name="porta">Port</string>
    <string name="preferenze">Preferences</string>
    <string name="previous">Previous</string>
    <string name="read_only">Read only</string>
    <string name="recent_files">Recent files</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="remote_folder_to_sync">Remote folder to sync</string>
    <string name="remoto">Remote</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="replace_all">Replace all</string>
    <string name="restore_accounts">Restore the accounts</string>
    <string name="riavva_per_tema">To change the theme, restart the application</string>
    <string name="rinomina">Rename</string>
    <string name="salva">Save</string>
    <string name="save_as">Save as</string>
    <string name="seleziona">Select</string>
    <string name="send_error_reports">Send error reports</string>
    <string name="set_as_working_folder">Set as the working folder</string>
    <string name="share">Share</string>
    <string name="split_text_if_too_long">Split the text if too long</string>
    <string name="testo_indietro">Undo</string>
    <string name="testo_rifai">Redo</string>
    <string name="text_to_find">Text to find</string>
    <string name="text_to_replace">Text to replace</string>
    <string name="view_markdown_result">View markdown result</string>
    <string name="actByteStream_btn_send_desc">Send button</string>
    <string name="actByteStream_input_hint">input string to send</string>
    <string name="dropdown1">9600</string>
    <string name="dropdown2">19200</string>
    <string name="dropdown3">38400</string>
    <string name="dropdown4">57600</string>
    <string name="dropdown6">115200</string>
    <string name="menu_baudrate">Baudrate</string>
    <string name="menu_bluetooth">Connect</string>
    <string name="menu_clear">Clear</string>
    <string name="note_baudrate">Baudrate in sketch must be set according to HC05 (57600/115200)</string>
    <string name="serial_monitor">Serial monitor</string>
    <string name="upload2">Upload</string>
</resources>