<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_usb_black_24dp" android:id="@id/menu_search" android:title="@string/menu_bluetooth" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_action_cls" android:id="@id/menu_clear" android:title="@string/menu_clear" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_more_vert_black_24dp" android:id="@id/menu_baudrate" android:title="@string/menu_baudrate" android:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/action_dropdown1" android:title="@string/dropdown1" />
            <item android:id="@id/action_dropdown2" android:title="@string/dropdown2" />
            <item android:id="@id/action_dropdown3" android:title="@string/dropdown3" />
            <item android:id="@id/action_dropdown4" android:title="@string/dropdown4" />
            <item android:id="@id/action_dropdown6" android:title="@string/dropdown6" />
        </menu>
    </item>
</menu>